Add DbContext and ConnectionString

--- a/Reactivities/API/appsettings.Development.json
+++ b/Reactivities/API/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnnection": "Data Source=reactivities.db"
   }
 }
