--- a/Reactivities/API/appsettings.Development.json
+++ b/Reactivities/API/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnnection": "Data Source=reactivities.db"
+    "DefaultConnection": "Data Source=reactivities.db"
   }
 }
