--- a/Reactivities/client-app/package.json
+++ b/Reactivities/client-app/package.json
@@ -16,6 +16,7 @@
     "mobx-react-lite": "^3.2.0",
     "react": "^17.0.2",
     "react-calendar": "^3.3.1",
+    "react-datepicker": "^3.7.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -53,6 +54,7 @@
   },
   "devDependencies": {
     "@types/react-calendar": "^3.1.4",
+    "@types/react-datepicker": "^3.1.8",
     "@types/react-router-dom": "^5.1.7",
     "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.11"
