--- a/Reactivities/client-app/package.json
+++ b/Reactivities/client-app/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "axios": "^0.21.1",
+    "date-fns": "^2.19.0",
     "formik": "^2.2.6",
     "mobx": "^6.1.8",
     "mobx-react-lite": "^3.2.0",
