Section 16: Add Cloudinary

--- a/Reactivities/API/appsettings.json
+++ b/Reactivities/API/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Cloudinary": {
+    "CloudName": "ddjtqem2q",
+    "ApiKey": "343865612623359",
+    "ApiSecret": "BEcCwLW7SThu8VzZzZoP_Bxt2VU"
+  }
 }
